Fixed vertical stretchin issue in image thumbnails

--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -116,6 +116,8 @@ body {
 }
 .panel .panel-image img
 {
+	max-width: 100%;
+	max-height: 100%;
 	display: block;
 	margin: auto;
 }
